--- a/easy level ques/part1.ipynb
+++ b/easy level ques/part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 195,
    "id": "e53c7e58",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 196,
    "id": "8d1cf8e1",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 197,
    "id": "0956d83e",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 198,
    "id": "8600caa6",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 199,
    "id": "3420ef92",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 200,
    "id": "fa55af5a",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 201,
    "id": "dc7ac6c3",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "2   Rohan   22"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 202,
    "id": "0fdf9687",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 203,
    "id": "dd5f91f0",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
        "2  Charlie  35"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 204,
    "id": "2491f73f",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "row      2     4"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 205,
    "id": "cefa0926",
    "metadata": {},
    "outputs": [
@@ -449,7 +449,7 @@
        "4   NaN   NaN   NaN"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 206,
    "id": "e6d42888",
    "metadata": {},
    "outputs": [],
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 207,
    "id": "ca62b443",
    "metadata": {},
    "outputs": [
@@ -514,31 +514,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>92</td>\n",
-       "      <td>48</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>76</td>\n",
+       "      <td>10</td>\n",
+       "      <td>87</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>87</td>\n",
-       "      <td>85</td>\n",
-       "      <td>56</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>64</td>\n",
-       "      <td>23</td>\n",
-       "      <td>78</td>\n",
+       "      <td>67</td>\n",
+       "      <td>88</td>\n",
+       "      <td>43</td>\n",
        "      <td>69</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
+       "      <td>85</td>\n",
+       "      <td>38</td>\n",
+       "      <td>95</td>\n",
        "      <td>9</td>\n",
-       "      <td>15</td>\n",
-       "      <td>11</td>\n",
-       "      <td>41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93</td>\n",
+       "      <td>8</td>\n",
+       "      <td>98</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -546,13 +546,13 @@
       ],
       "text/plain": [
        "   col1  col2  col3  col4\n",
-       "0    92    48     1    15\n",
-       "1    87    85    56    90\n",
-       "2    64    23    78    69\n",
-       "3     9    15    11    41"
+       "0    14    76    10    87\n",
+       "1    67    88    43    69\n",
+       "2    85    38    95     9\n",
+       "3    93     8    98    19"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 208,
    "id": "a746f1f3",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 209,
    "id": "8414a2c1",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 210,
    "id": "e4de5d2b",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 211,
    "id": "29ac821a",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "2    70    80    90"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 212,
    "id": "a02e0f7c",
    "metadata": {},
    "outputs": [],
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 213,
    "id": "93754785",
    "metadata": {},
    "outputs": [
@@ -730,7 +730,7 @@
        "2    70    80    90>"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,24 +758,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 215,
    "id": "2f7e3185",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'v' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[194]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mv\u001b[49m\n\u001b[32m      2\u001b[39m data = {\n\u001b[32m      3\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mName\u001b[39m\u001b[33m'\u001b[39m: [\u001b[33m'\u001b[39m\u001b[33mAmit\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mPriya\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mRaj\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mSneha\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mKaran\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMeera\u001b[39m\u001b[33m'\u001b[39m],\n\u001b[32m      4\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mAge\u001b[39m\u001b[33m'\u001b[39m: [\u001b[32m23\u001b[39m, \u001b[32m25\u001b[39m, \u001b[32m21\u001b[39m, \u001b[32m22\u001b[39m, \u001b[32m24\u001b[39m, \u001b[32m26\u001b[39m],\n\u001b[32m      5\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mCity\u001b[39m\u001b[33m'\u001b[39m: [\u001b[33m'\u001b[39m\u001b[33mDelhi\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mMumbai\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mKolkata\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mChennai\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mPune\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mJaipur\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m      6\u001b[39m }\n\u001b[32m      8\u001b[39m df = pd.DataFrame(data)\n",
-      "\u001b[31mNameError\u001b[39m: name 'v' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Name  Age     City\n",
+      "0   Amit   23    Delhi\n",
+      "1  Priya   25   Mumbai\n",
+      "2    Raj   21  Kolkata\n",
+      "3  Sneha   22  Chennai\n",
+      "4  Karan   24     Pune\n"
      ]
     }
    ],
    "source": [
-    "v\n",
+    "\n",
     "data = {\n",
     "    'Name': ['Amit', 'Priya', 'Raj', 'Sneha', 'Karan', 'Meera'],\n",
     "    'Age': [23, 25, 21, 22, 24, 26],\n",
