--- a/easy level ques/part2.ipynb
+++ b/easy level ques/part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 5,
    "id": "5b8f15f3",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 6,
    "id": "60009522",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 7,
    "id": "621308bb",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "id": "454d5a86",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 9,
    "id": "e4806eb3",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
        "5  Meera   26"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "713959cd",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "id": "0d850b34",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "Name: row1, dtype: object"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "5f46cd55",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "row2  Priya   25  Mumbai"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "id": "433f3416",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "row6  Meera   26   Jaipur"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "id": "bc386d1e",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
        "row2  Priya"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "id": "e589a7f1",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
        "row4  Sneha  Chennai"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "id": "8c922422",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "row5   24   Pune"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "id": "23368e1d",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "row5   24"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 18,
    "id": "9bcb2ced",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 19,
    "id": "d72cce7b",
    "metadata": {},
    "outputs": [
@@ -794,7 +794,7 @@
        "row6  Meera   26   Jaipur"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "id": "6472d6b9",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "Meera   26   Jaipur"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "id": "bccb3ead",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "row6  Meera   26   Jaipur"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 22,
    "id": "9d2e8afa",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1084,7 @@
        "5  row6  Meera   26   Jaipur"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 23,
    "id": "987aca7f",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 24,
    "id": "d9fdd205",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1186,7 @@
        "5  Meera   40   Jaipur"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "id": "28231181",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "id": "0b28165c",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1274,7 @@
        "2  Gayatri   21  New york"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 27,
    "id": "112d0fe7",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
        "4  Karan   26  London"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 28,
    "id": "bbecf3fb",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1441,7 @@
        "5    Meera   40     Paris"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 29,
    "id": "6d7824e5",
    "metadata": {},
    "outputs": [],
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 30,
    "id": "8170a74c",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1572,7 @@
        "7   Sara   34   Jaipur"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 31,
    "id": "7c17fab9",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1678,7 @@
        "7  False  False  False"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1689,7 +1689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "id": "c3e1f0ff",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1749,7 @@
        "5  Meera   40  Berlin"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 33,
    "id": "55f0dbd2",
    "metadata": {},
    "outputs": [
@@ -1842,7 +1842,7 @@
        "7   Sara   34   Jaipur"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1862,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 34,
    "id": "926842ee",
    "metadata": {},
    "outputs": [],
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 35,
    "id": "e3d092ef",
    "metadata": {},
    "outputs": [
@@ -1892,7 +1892,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "14ab5b80",
    "metadata": {},
    "outputs": [
@@ -1937,71 +1937,232 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       A     B      C      D\n",
-       "0   True  True   True   True\n",
-       "1   True  True   True  False\n",
-       "2  False  True   True  False\n",
-       "3   True  True  False  False\n",
-       "4   True  True  False   True"
+       "     A  B    C    D\n",
+       "0  1.0  1  1.0  1.0\n",
+       "1  2.0  2  2.0  NaN\n",
+       "3  4.0  4  NaN  NaN\n",
+       "4  5.0  5  NaN  5.0"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df1 = df[df['A'].notnull()]\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e83e45de",
+   "metadata": {},
+   "source": [
+    "40. Filter using a query: query() method ka use karke 'Age > 22' condition ke saath rows ko filter\n",
+    "karein.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "68fff01a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data = {\n",
+    "    'Name': ['Amit', 'Priya', 'Raj', 'Sneha', 'Karan', 'Meera'],\n",
+    "    'Age': [23, 25, 21, 22, 24, 26],\n",
+    "    'City': ['Delhi', 'Mumbai', 'Kolkata', 'Chennai', 'Pune', 'Jaipur']\n",
+    "}\n",
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ac0bc269",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amit</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Priya</td>\n",
+       "      <td>25</td>\n",
+       "      <td>Mumbai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Raj</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sneha</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Chennai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Karan</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Pune</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Meera</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Jaipur</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age     City\n",
+       "0   Amit   23    Delhi\n",
+       "1  Priya   25   Mumbai\n",
+       "2    Raj   21  Kolkata\n",
+       "3  Sneha   22  Chennai\n",
+       "4  Karan   24     Pune\n",
+       "5  Meera   26   Jaipur"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "042505bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Meera</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Jaipur</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Name  Age    City\n",
+       "5  Meera   26  Jaipur"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.query('Age > 25')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0bc269",
+   "id": "bf334712",
    "metadata": {},
    "outputs": [],
    "source": []
